<resources>
    <string name="app_name">Punch List</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="Continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="goodMorning">Good Morning</string>
    <string name="departmentList">Department List</string>
    <string name="passwordSentToRegisterEmail">Password will be sent to registered email id.</string>
</resources>
