<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/black_border_radius"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/_5sdp"
        android:text="@string/forgotPassword"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/fontLarge"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:paddingTop="@dimen/_5sdp"
        android:text="@string/passwordSentToRegisterEmail"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/fontMedium" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/CustomEditText"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/border_black"
        android:hint="@string/username" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/colorBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.95"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/cancel"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/fontLarge"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/colorBlack" />

        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.95"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/submit"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/fontLarge"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>