<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorAccent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/action_sign_in_short"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fontExtraLarge" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.02"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="@dimen/_100sdp"
                android:layout_height="0dp"
                android:layout_weight="0.01"
                android:background="@color/colorBlue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.02"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="@dimen/_100sdp"
                android:layout_height="0dp"
                android:layout_weight="0.01"
                android:background="@color/colorBlue" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.96"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:paddingTop="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/editTextHeight"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@+id/etUserName"
                    style="@style/CustomEditText"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/username" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorBlack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/editTextHeight"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_lock" />

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/CustomEditText"
                    android:background="@null"
                    android:hint="@string/password" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="forgotPassword"
                android:padding="5dp"
                android:text="@string/forgotPassword"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/fontLarge" />

            <Button
                android:onClick="btnContinue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/colorBlue"
                android:text="@string/Continue"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fontExtraLarge" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>